[package]
name = "dynamic-amm"
version = "0.6.1"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
localnet = []
staging = []

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm"

[dependencies]
# anchor
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

# solana
solana-program = { workspace = true }

