[package]
name = "dynamic-vault"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
localnet = []

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_vault"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
